Front Faces Only fails for low poly sculpting grab #25371

Closed
opened 2010-12-24 03:29:06 +01:00 by A Saurus1 · 5 comments

%%%1) open default scene, with cube.
2) go to sculpting mode.
3) select grab tool and front faces only option
4) try and drag one of the vertices of the cube
5) the vertex snaps between the original click location and the mouse cursor once you move it far enough away from the original position.

Now, why you would be sculpting an 8-vert cube with front faces only, I don't know, but it is a bug in blender's behavior (I'm pretty sure).

r33822%%%

%%%1) open default scene, with cube. 2) go to sculpting mode. 3) select grab tool and front faces only option 4) try and drag one of the vertices of the cube 5) the vertex snaps between the original click location and the mouse cursor once you move it far enough away from the original position. Now, why you would be sculpting an 8-vert cube with front faces only, I don't know, but it is a bug in blender's behavior (I'm pretty sure). r33822%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fix in svn; the 'grab' brush was limiting itself to brush size in this case.

Nicholas: if you see this, check the commit, it has a note :)%%%

%%%Fix in svn; the 'grab' brush was limiting itself to brush size in this case. Nicholas: if you see this, check the commit, it has a note :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Fixed r33888 (for historic sake)

Fixed r33888 (for historic sake)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25371
No description provided.