Bugfix #25371

Sculpt: brush type "Grab" with option "Frontface only" was flipping
back and forth when grabbing outside of original brush area.

Reason: it was calling a function that used deformed coordinates
for getting normal, clipped by brush area. Now it uses original
coordinates, so it always finds normal.

Nicholas can determine better if tag "cache->original" should be
set as default for this brush type, this far I don't dare to go :)